# mlita_labs

lab185/: CMakeLists.txt
lab185/src/: main.cpp
lab185/src/lib/: BinaryHeap.h  Deijkstra.h  WeightedGraph.h
lab1924/: CMakeLists.txt
lab1924/src/: main.cpp
lab1924/src/lib/: SimpleBigInt.h
lab815/: CMakeLists.txt
lab815/src/: main.cpp
lab815/src/lib/: BinaryHeap.h  Deijkstra.h  WeightedGraph.h
lab82/: CMakeLists.txt
lab82/src/: main.cpp  main_inversion.cpp  main_permutation.cpp
lab82/src/lib/: InversionVector.h  Permutation.h
lab82/src/test/: mult_correct.in.txt
